优化分类请求

--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
                                     </a>
                                 </li>
                                 <li role="presentation">
-                                    <a href="http://yjxxclub.cn/resources">
+                                    <a href="javascript:;">
                                         资源
                                     </a>
                                 </li>
                                 <li role="presentation">
-                                    <a href="http://yjxxclub.cn/download/">
+                                    <a href="javascript:;">
                                         下载
                                     </a>
                                 </li>
                                 <li role="presentation">
-                                    <a href="http://yjxxclub.cn/about/">
+                                    <a href="javascript:;">
                                         关于
                                     </a>
                                 </li>
@@ -84,7 +84,7 @@
         <!-- end navigation -->
         <!-- content start -->
         <div class="content-warp">
-            <div class="container">
+            <div class="container" style="min-height: 818px;">
                 <div class="row">
                     <!-- 左半部分 -->
                     <div class="col-md-8 main-content">
@@ -188,7 +188,7 @@
                                     <!-- start category area -->
                                     <ul class="nav nav-sidebar">
                                         <li class="">
-                                            <a href="/blog/index.html?releaseDateStr=2017年03月">
+                                            <a href="javascript:;">
                                                 tensorflow
                                                 <sup>
                                                     1
@@ -196,7 +196,7 @@
                                             </a>
                                         </li>
                                         <li class="">
-                                            <a href="/blog/index.html?releaseDateStr=2017年02月">
+                                            <a href="javascript:;">
                                                 爬虫系列
                                                 <sup>
                                                     18
@@ -204,7 +204,7 @@
                                             </a>
                                         </li>
                                         <li class="">
-                                            <a href="/blog/index.html?releaseDateStr=2017年02月">
+                                            <a href="javascript:;">
                                                 数据可视化
                                                 <sup>
                                                     18
