--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
             <script src="js/bubble.js" type="text/javascript"></script>
             <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"></head>
             <link href="css/index.css" rel="stylesheet" type="text/css"></link>
-            <script type="text/javascript">baseUrl = "file:///home/tengxing/tmp/yjxx/index.html";
+            <script type="text/javascript">
+            baseUrl = "index.html";
+            serverUrl = "http://140.143.93.39:3000/"
             </script>
     </head>
     <body style="background-color: #f9f9f9;">
