--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
             <script src="js/bubble.js" type="text/javascript"></script>
             <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"></head>
             <link href="css/index.css" rel="stylesheet" type="text/css"></link>
+            <link href="https://cdn.quilljs.com/1.3.4/quill.snow.css" rel="stylesheet">
             <script type="text/javascript">
             baseUrl = "index.html";
-            serverUrl = "http://140.143.93.39:3000/"
+            serverUrl = "http://localhost:3000/"
             </script>
     </head>
     <body style="background-color: #f9f9f9;">
