--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
             baseUrl = "index.html";
             serverUrl = "http://localhost:3000/"
             </script>
+            <style type="text/css">
+                .ql-snow .ql-editor pre.ql-syntax {
+    background-color: #23241f;
+    color: #f8f8f2;
+    overflow: visible;
+}
+            </style>
     </head>
     <body style="background-color: #f9f9f9;">
         <!--[if lt IE 9]>
@@ -90,7 +97,7 @@
             <div class="container" style="min-height: 818px;">
                 <div class="row">
                     <!-- 左半部分 -->
-                    <div class="col-md-8 main-content">
+                    <div class="col-md-8 main-content" style="width: 70%">
                         <!-- 文章list -->
                         <div id="getBlogList"></div>
                         <!-- 分页 -->
@@ -172,7 +179,7 @@
                         </div>
                     </div>
                     <!-- 右半部分 -->
-                    <div class="col-md-4 sidebar">
+                    <div class="col-md-4 sidebar" style="width: 30%">
                         <div class="sidebar-content">
                             <!-- search area -->
                             <form action="http://yjxxclub.cn/blog/search" class="form-horizontal" method="GET" role="form">
@@ -265,6 +272,7 @@
             <!-- footer end -->
             <script src="js/index.js"></script>
             <script type="text/javascript" src="js/vue.min.js"></script>
+            <script src="admin/js/quill.1.3.4.min.js"></script>
         </div>
     </body>
 </html>
