--- a/admin/index.html
+++ b/admin/index.html
@@ -1,6 +1,3 @@
-
- 
- 
 <!DOCTYPE html>
 <html>
 <head>
@@ -58,9 +55,8 @@
         <li class="layui-nav-item layui-nav-itemed">
           <a class="" href="javascript:;">文章管理</a>
           <dl class="layui-nav-child">
-            <dd><a href="javascript:;" data-url="page/add.html" data-id="1">列表一</a></dd>
-            <dd><a href="javascript:;" data-url="page/list.html" data-id="3">列表二</a></dd>
-            <dd><a href="javascript:;" data-url="page/edit.html" data-id="2">列表三</a></dd>
+            <dd><a href="javascript:;" data-url="page/article/add.html" data-id="1">写文章</a></dd>
+            <dd><a href="javascript:;" data-url="page/article/list.html" data-id="3">文章信息管理</a></dd>
             <dd><a href="">超链接</a></dd>
           </dl>
         </li>
